web-infras/parser/tests/fixtures/babel/es2022/class-properties/static-field-named-constructor/output.txt
[SyntaxError]: Classes may not have a field named 'constructor'. (2,12)
2|    static constructor;
 |          ^
